An even better text overflow fix: no set width

--- a/style/less/style.less
+++ b/style/less/style.less
@@ -381,7 +381,6 @@ header {
 				line-height: 150%;
 				width: 100%;
 				flex-basis: auto; /* default value */
-				min-width: 82vw;
 				@media @smallmobile {
 					min-width: 275px;
 				}
